# Registerer

./: .travis.yml  CMakeLists.txt  Cxx11  GMock  README.md  registerer.h  registerer_example.cc  registerer_test.cc  registerer_test_deps.cc  registerer_test_deps.h
